@@ -1,11 +1,11 @@
-library(sevenbridges)
+library("sevenbridges")
 in.lst <- list(input(id = "number",
                      description = "number of observations",
                      type = "integer",
                      label = "number",
                      prefix = "--n",
                      default = 1,
-                     required = TRUE, 
+                     required = TRUE,
                      cmdInclude = TRUE),
                input(id = "min",
                      description = "lower limits of the distribution",
@@ -30,24 +30,21 @@ in.lst <- list(input(id = "number",
 ## the same method for outputs
 out.lst <- list(output(id = "random",
                        type = "file",
-                       label = "output", 
+                       label = "output",
                        description = "random number file",
                        glob = "*.txt"),
                 output(id = "report",
                        type = "file",
-                       label = "report", 
+                       label = "report",
                        glob = "*.html"))
-
 
 rbx <- Tool(id = "runif",
             label = "Random number generator",
-            hints = requirements(docker(pull = "tengfei/runif"), 
+            hints = requirements(docker(pull = "tengfei/runif"),
                                  cpu(1), mem(2000)),
             baseCommand = "runif.R",
-            inputs = in.lst, ## or ins.df
+            inputs = in.lst,  # or ins.df
             outputs = out.lst)
-
 
 fl <- "inst/docker/sevenbridges/rabix/runif.json"
 write(rbx$toJSON(pretty = TRUE), fl)
-
