@@ -13,13 +13,12 @@ server {
     # Run this location in 'site_dir' mode, which hosts the entire directory
     # tree at '/srv/shiny-server'
     site_dir /srv/shiny-server;
-    
+
     # Define where we should put the log files for this location
     log_dir /var/log/shiny-server;
-    
-    # Should we list the contents of a (non-Shiny-App) directory when the user 
+
+    # Should we list the contents of a (non-Shiny-App) directory when the user
     # visits the corresponding URL?
     directory_index on;
   }
 }
-     
