@@ -26,4 +26,3 @@ stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 startsecs=0
 autorestart=false
-
